[metadata]
name = blpytorchlightning
author = Nathan J. Neeteson
author-email = njneetes@ucalgary.ca
summary = Dataset components, tasks, loss functions, utilities for using pytorch lightning with medical image data
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/Bonelab/bonelab-pytorch-lightning
project_urls =
    Source Code = https://github.com/Bonelab/bonelab-pytorch-lightning
license = GPL-v3
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python
keywords =
    medical
    imaging

[entry_points]

[pbr]
skip_changelog = 1
skip_authors = 1